--- a/styles_scripts/src/css/global/header-nav.css
+++ b/styles_scripts/src/css/global/header-nav.css
@@ -182,15 +182,30 @@ header {
     content: "";
     width: 10px;
     height: 10px;
-    background-image: url(/wp-content/uploads/2022/10/angle-down-solid.svg);
+    background-image: url(/wp-content/uploads/2023/10/angle-down.svg);
     position: absolute;
     background-repeat: no-repeat;
     background-size: cover;
     top: 50%;
     transform: translate(0, -50%);
     right: -15px;
-    transition: transform 0.5s;
-    border: 1px solid #303030; /* add an icon as a background image and remove this border */
+    transition: opacity 0.5s;
+    opacity: 1;
+  }
+
+  ul#menu-primary-menu > li.menu-item-has-children > a::before {
+    content: "";
+    width: 10px;
+    height: 10px;
+    background-image: url(/wp-content/uploads/2023/10/angle-up.svg);
+    position: absolute;
+    background-repeat: no-repeat;
+    background-size: cover;
+    top: 50%;
+    transform: translate(0, -50%);
+    right: -15px;
+    transition: opacity 0.5s;
+    opacity: 0;
   }
 
   ul#menu-primary-menu > li.menu-item-has-children input.mobile-nav-checkbox:checked ~ a::after {
@@ -308,7 +323,11 @@ header {
     }
 
     ul#menu-primary-menu > li.menu-item-has-children:hover > a::after {
-      transform: rotate(180deg) translateX(0) translateY(5px);
+      opacity: 0;
+    }
+
+    ul#menu-primary-menu > li.menu-item-has-children:hover > a::before {
+      opacity: 1;
     }
 
     ul#menu-primary-menu > li.menu-item-has-children > ul.sub-menu > li > a {
